# Horix-Ai-Backend-

./: .env.example  .env.template  .gitignore  CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_CONFIG_SOLUTION.md  README.md  README_MCP_AGENT.md  final_demo.py  mcp_config_log.json  pyproject.toml  requirements.txt  setup.py  status_check.py  test_all_modes.py  test_end_to_end_automation.py
Doc/: README_FOR_ALL_MCP.md  manim-mcp_README.md  mcp-git-ingest_README.md  mcp-wikipedia_README.md  readme_metadata.json  youtube_video_mcp_README.md
config_backups/: js_config_20250817_205339.ts  python_config_20250817_205339.py
src/: config_validator.py  enhanced_ai_protocol_working.py  enhanced_config_manager.py  mcp_auto_config_agent.py  mcp_integration.py  prompt_based_mcp_addition.py  readme_manager.py
src/Base/MCP_structure/: MCP_LAUNCHER_USAGE.md  README.md  mcp_ai_config_agent.py  mcp_auto_config.py  mcp_launcher.py  setup_ai_config.py
src/Base/MCP_structure/config/: servers.json
src/Base/MCP_structure/mcp_servers_documentation/BLENDER_MCP/: credentials.md  demo_videos.md  server_features.md
src/Base/MCP_structure/mcp_servers_documentation/BUGSNAG/: credentials.md  demo_videos.md  server_features.md
src/Base/MCP_structure/mcp_servers_documentation/LANGSMITH_MCP/: credentials.md  demo_videos.md  server_features.md
src/Base/MCP_structure/mcp_servers_documentation/PAGERDUTY_MCP/: credentials.md  demo_videos.md  server_features.md
src/ai_agent_protocol/: api.py  cli.py  core.py  examples.py  templates.py
(+40 files in other folders)
