[project]
name = "backend"
version = "0.1.0"
description = "AI Agent Protocol with Automatic MCP Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "asyncio-mqtt>=0.16.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
ai-agent = "ai_agent_protocol.cli:main"
ai-agent-api = "ai_agent_protocol.api:main"
